docs/v7.1.2/properties/P169.md
---
layout: page
title: P169 définit le volume spatio-temporel (volume spatio-temporel défini par)
titleEn: P169 defines spacetime volume (spacetime volume is defined by) - définit le volume spatio-temporel (volume spatio-temporel défini par)
permalink: /v7.1.2/proprietes/P169
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E95 Spacetime Primitive</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E95_Primitive_spatio-temporelle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E92 Spacetime Volume</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
<p>E41 Appellation. P1i identifies (is identified by): E1 CRM Entity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E41_Appellation</code>. <code class="language-plaintext highlighter-rouge">P1i_identifie (est_identifié_par)</code> : <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to one, necessary (1,1:0,n)</p>
</td>
<td>
<p>plusieurs à un, nécessaire (1,1:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property associates an instance of E95 Spacetime Primitive with the instance of E92 Spacetime Volume it defines.</p>
</td>
<td>
<p>Cette propriété associe une instance de <code class="language-plaintext highlighter-rouge">E95_Primitive_spatio-temporelle</code> à l’instance de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> qu’elle définit.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>{40°30'23"N 21°14'53"E, 40°31'40"N 21°16'43"E, 200BC-2020AD} (E95) defines spacetime volume Martin’s spatiotemporal enclosure 2020 for the evolution of the settlement of today’s city of Kastoria, Greece, since its conquest by the Romans (E92). [A square covering the current built settlement structure of Kastoria, Greece, through the years 200BC to 2020AD, which includes the extents of earlier phases of the city]</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>« 40°30'23"N 21°14'53"E, 40°31'40"N 21°16'43"E, 200BC-2020AD » (<code class="language-plaintext highlighter-rouge">E95_Primitive_spatio-temporelle</code>) définit le volume spatio-temporel (<code class="language-plaintext highlighter-rouge">P169_définit_le_volume_spatio-temporel</code>) de l’enceinte spatio-temporelle de Martin en 2020 pour l’évolution de l’occupation de la ville actuelle de Kastoria en Grèce depuis sa conquête par les Romains (<code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code>) [une surface couvrant la structure de l'occupation actuelle de la ville de Kastoria en Grèce, des années 200 AEC à 2020 EC, incluant les étendues des phases antérieures de la ville]</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P169(x,y) ⇒ E95(x)</p>
<p>P169(x,y) ⇒ E92(y)</p>
<p>P169(x,y) ⇒ P1i(x,y)</p>
</td>
<td>
<p>P169(x,y) ⇒ E95(x)</p>
<p>P169(x,y) ⇒ E92(y)</p>
<p>P169(x,y) ⇒ P1i(x,y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
